更换登录方式, 实现 cookie 获取

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('bilimusic-gtk', 'c')
 
-deps = [dependency('gtk4'), dependency('libadwaita-1'), dependency('libcjson'), dependency('libcurl')]
+deps = [dependency('gtk4'), dependency('libadwaita-1'), dependency('libcjson'), dependency('libcurl'), dependency('webkitgtk-6.0')]
 
 src = ['src/main.c', 'src/ui/ui_home.c', 'src/ui/ui_source.c', 'src/ui/ui_account.c', 'src/api_account.c']
 
