--- a/meson.build
+++ b/meson.build
@@ -2,6 +2,6 @@ project('bilimusic-gtk', 'c')
 
 deps = [dependency('gtk4'), dependency('libadwaita-1'), dependency('libcjson'), dependency('libcurl'), dependency('webkitgtk-6.0')]
 
-src = ['src/main.c', 'src/ui/ui_home.c', 'src/ui/ui_source.c', 'src/ui/ui_account.c', 'src/api_account.c']
+src = ['src/main.c', 'src/ui/home.c', 'src/ui/source.c', 'src/ui/login.c', 'src/api/account.c']
 
 executable('bilimusic-gtk', src, dependencies : deps)
