手动导入支持, 添加导入信息

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,18 @@
 project('bilimusic-gtk', 'c')
 
 deps = [dependency('gtk4'), dependency('libadwaita-1'), dependency('libcjson'), dependency('libcurl'), dependency('webkitgtk-6.0')]
-src = ['src/main.c', 'src/ui/home.c', 'src/ui/source.c', 'src/ui/login.c', 'src/api/account.c']
+src = files(
+  'src/main.c',
+  'src/ui/home.c',
+  'src/ui/login.c',
+  'src/ui/source.c',
+  'src/api/import.c',
+  'src/api/import_manually.c',
+  'src/api/login_get_info.c',
+  'src/api/start_get_account.c',
+  'src/api/start_get_favo.c',
+  'src/api/utils.c',
+  )
 link_args = ['-lm']
 
 executable('bilimusic-gtk', src, link_args: link_args, dependencies : deps)
