实现音频列表基础UI, 音质选择, 修复分配错误，修复 '刷新' 错误

--- a/meson.build
+++ b/meson.build
@@ -6,10 +6,12 @@ src = files(
   'src/ui/home.c',
   'src/ui/login.c',
   'src/ui/source.c',
+  'src/api/get_music.c',
   'src/api/import.c',
   'src/api/import_manually.c',
   'src/api/login_get_info.c',
   'src/api/start_get_account.c',
+  'src/api/start_read_list.c',
   'src/api/start_get_favo.c',
   'src/api/utils.c',
   )
